# POM-AGENT

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
POMPEII/pompeii/: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example
contracts/: README.md  kernel_port_boundary.md
docs/: README.md
docs/design/: CHANGELOG.md  INDEX.md  STATUS.md  会话与双库长期记忆架构设计.md  开发状态与系统接口.md  架构设计ver0.4.md  架构设计ver0.5.md
docs/guides/: API密钥配置操作手册.md  系统测试流程.md  继续开发手册.md
examples/: minimal_kernel.py
scripts/: load_env.ps1  run-cli.ps1  run-http.cmd  run-http.ps1  run-resource-migrate.ps1
src/: __init__.py
tests/: conftest.py  test_agent_core_security_policy.py  test_archive_llm_summary.py  test_assembly_impl.py  test_assembly_openai_user_content.py  test_build_core_assembly_override.py  test_config_provider.py  test_confirmation_approved.py  test_context_isolation.py  test_delegate_flow.py  test_device_backend.py  test_device_backend_registry.py  test_fact_crud.py  test_guard_evaluator_registry.py  test_http_get_tool.py  test_http_runtime_ws.py  test_http_url_guard.py  test_intent_parser.py  test_kernel_config_loader.py  test_loop_repeated_tool_call.py  test_mcp_bridge_registry.py  test_mcp_config_loader_http_stream_fields.py  test_mcp_http_bridge.py  test_mcp_stdio_bridge.py  test_memory_dual_store_integration.py  test_memory_orchestrator_registry.py  test_memory_reindex_gc.py  test_memory_remote_retrieval.py  test_memory_store_registry.py  test_model_backend_registry.py  test_model_failover.py  test_model_http_client_pool.py  test_model_prompt_profiles.py  test_model_provider_circuit.py  test_model_provider_loader.py  test_model_provider_rate_limit.py  test_multimodal_user_payload.py  test_openai_provider_route.py  test_openai_session_messages.py  test_openai_stream.py  (+29 more)
(+246 files in other folders)
